[package]
name = "malakit"
version = "0.6.8"
edition = "2024"
license = "MIT"
description = "Simple dynamic analysis toolkit for Windows"
repository = "https://github.com/ncmprbll/malakit"
readme = "README.md"

[dependencies]

[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Memory"
]
